--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                         <form action="#" method="post" class="search-error">
                             <input type="search" class="search-input" placeholder="Search your keywords.." required>
-                            <button onclick="window.location.href='about.html'" type="button" id="add"><img src="images/search1.png" alt="" width="35"height="35"></button>
+                            <button onclick="location.href='about.html'" type="button" id="add"><img src="images/search1.png" alt="" width="35"height="35"></button>
                         </form>
                         
                         <div class="user-action">
